--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -24,7 +24,7 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #0024c5;
+    color: #828282;
 }
 
 .save {
@@ -40,6 +40,7 @@ h1, h2, h3, h4 {
     float: right;
     font-size: 26pt;
     margin-right: 20px;
+    text-decoration: none;
 }
 
 .post {
