--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -47,6 +47,10 @@ h1, h2, h3, h4 {
     margin-bottom: 70px;
 }
 
+.comment {
+    margin: 20px 0px 20px 20px;
+}
+
 .post h2 a, .post h2 a:visited {
     color: #000000;
 }
