--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,10 @@
         <div class="page-header">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}"  class="top-menu"><span class="fa fa-plus"></span></a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="fa fa-edit"></span></a>
+                <p class="top-menu">Hello {{ user.name }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+            {% else %}
+                <a href="{% url 'login' %}" class="top-menu"><span class="fa fa-lock"></span></a>
             {% endif %}
             <h1><a href="{% url 'post_list'%}">Django Girls Blog</a></h1>
         </div>
