--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,13 +4,36 @@
 <div class="post">
     {% if post.published_date %}
         <div class="date">
-            <p>{{ post.published_date }}</p>
+            {{ post.published_date }}
         </div>
-    {% endif%}
-    <h2>{{ post.title }}</h2>
-    {% if user.is_authenticated %}
-        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="fa fa-pencil"></span></a>
+    {% else %}
+        <a class="btn btn-outline-secondary" href="{% url 'post_publish' pk=post.pk %}" role="button">Publish</a>
     {% endif %}
+    {% if user.is_authenticated %}
+        <a class="btn btn-outline-secondary" href="{% url 'post_edit' pk=post.pk %}" role="button"><span class="fa fa-pencil"></span></a>
+    {% endif %}
+    <a class="btn btn-secondary" href="{% url 'post_remove' pk=post.pk%}"><span class="fa fa-remove"></span></a>
+    <h1>{{ post.title }}</h1>
     <p>{{ post.text|linebreaksbr }}</p>
 </div>
+
+<hr>
+<a class="btn btn-outline-secondary" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+{% for comment in post.comments.all %}
+    {% if user.is_authenticated or comment.approved_comment %}
+    <div class="comment">
+        <div class="date">
+            {{ comment.created_date }}
+            {% if not comment.approved_comment %}
+                <a class="btn btn-outline-secondary" href="{% url 'comment_remove' pk=comment.pk %}"><span class="fa fa-remove"></span></a>
+                <a class="btn btn-outline-secondary" href="{% url 'comment_approve' pk=comment.pk %}"><span class="fa fa-check"></span></a>
+            {% endif %}
+        </div>
+        <strong>{{ comment.author }}</strong>
+        <p>{{ comment.text|linebreaks }}</p>
+    </div>
+    {% endif %}
+{% empty %}
+    <p>No comments here yet :(</p>
+{% endfor %}
 {% endblock %}
