--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,10 +1,10 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h2>Edit post</h2>
+    <h1>Edit post</h1>
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">save</button>
+        <button type="submit" class="save btn btn-secondary">save</button>
     </form>
 {% endblock %}
